keyterms/static/css/collapse.css
.img-responsive {
    display: block;
    max-width: 100%;
    height: auto;
}

.img-rounded {
    border-radius: 6px;
}

.img-thumbnail {
    padding: 4px;
    line-height: 1.42857143;
    background-color: #ffffff;
    border: 1px solid #dddddd;
    border-radius: 4px;
    -webkit-transition: all 0.2s ease-in-out;
    -o-transition: all 0.2s ease-in-out;
    transition: all 0.2s ease-in-out;
    display: inline-block;
    max-width: 100%;
    height: auto;
}

.img-circle {
    border-radius: 50%;
}

hr {
    margin-top: 20px;
    margin-bottom: 20px;
    border: 0;
    border-top: 1px solid #eeeeee;
}

.sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    border: 0;
}

.sr-only-focusable:active,
.sr-only-focusable:focus {
    position: static;
    width: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    clip: auto;
}

[role="button"] {
    cursor: pointer;
}

.fade {
    opacity: 0;
    -webkit-transition: opacity 0.15s linear;
    -o-transition: opacity 0.15s linear;
    transition: opacity 0.15s linear;
}

.fade.in {
    opacity: 1;
}

.flex-col {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    padding-right: 15px;
    padding-left: 15px;
    min-width: 25%;
}

.collapsible-box {
    -webkit-box-flex: 1;
    min-height: 1px;
    padding: 1.25rem;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-line-pack: start;
    align-content: flex-start;
    -ms-flex: 1;
    flex: 1;
}

.collapse {
    display: none;
}

.collapse.in {
    display: block;
}

tr.collapse.in {
    display: table-row;
}

tbody.collapse.in {
    display: table-row-group;
}

.collapsing {
    position: relative;
    height: 0;
    overflow: hidden;
    -webkit-transition-property: height, visibility;
    -o-transition-property: height, visibility;
    transition-property: height, visibility;
    -webkit-transition-duration: 0.35s;
    -o-transition-duration: 0.35s;
    transition-duration: 0.35s;
    -webkit-transition-timing-function: ease;
    -o-transition-timing-function: ease;
    transition-timing-function: ease;
}

.clearfix:before,
.clearfix:after {
    display: table;
    content: " ";
}

.clearfix:after {
    clear: both;
}

.center-block {
    display: block;
    margin-right: auto;
    margin-left: auto;
}

.pull-right {
    float: right !important;
    line-height: 40px !important;
    display: inline-block;
}

.pull-left {
    float: left !important;
}

.hide {
    display: none !important;
}

.show {
    display: block !important;
}

.invisible {
    visibility: hidden;
}

.text-hide {
    font: 0/0 a;
    color: transparent;
    text-shadow: none;
    background-color: transparent;
    border: 0;
}

.hidden {
    display: none !important;
}

.affix {
    position: fixed;
}

.collapse-btn {
    display: block;
    font-weight: 400;
    text-align: center;
    white-space: nowrap;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    padding: .375rem .75rem;
    font-size: 1rem;
    line-height: 1.5;
    border-radius: .25rem;
    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
    margin: 0 auto;
    height: 40px;
    line-height: 40px;
    border: 0;
    width: 100%;
    padding: 10px 20px 0px 20px;
    background-image: none;
    text-shadow: none;
    box-shadow: none;
}

.collapse-btn:focus,
.collapse-btn:hover {
    text-decoration: none !important;
    background-image: none !important;
    text-shadow: none !important;
    box-shadow: none !important;
    background-color: none !important;
}

.collapse-btn.focus,
.collapse-btn:focus {
    outline: 0;
    box-shadow: 0 0 0 .2rem rgba(0, 123, 255, .25)
}

.collapse-btn.disabled,
.collapse-btn:disabled {
    opacity: .65
}

.collapse-btn:not(:disabled):not(.disabled) {
    cursor: pointer
}

.collapse-btn:not(:disabled):not(.disabled).active,
.collapse-btn:not(:disabled):not(.disabled):active {
    background-image: none
}

a.collapse-btn.disabled,
fieldset:disabled a.collapse-btn {
    pointer-events: none
}

.collapse-btn-primary {
    color: #fff;
    background-color: #007bff;
    border-color: #007bff
}

.collapse-btn-primary:hover {
    color: #fff;
    background-color: #0069d9;
    border-color: #0062cc
}

.collapse-btn-primary.focus,
.collapse-btn-primary:focus {
    box-shadow: 0 0 0 .2rem rgba(0, 123, 255, .5)
}

.collapse-btn-primary.disabled,
.collapse-btn-primary:disabled {
    color: #fff;
    background-color: #007bff;
    border-color: #007bff
}

.collapse-btn-primary:not(:disabled):not(.disabled).active,
.collapse-btn-primary:not(:disabled):not(.disabled):active,
.show>.collapse-btn-primary.dropdown-toggle {
    color: #fff;
    background-color: #0062cc;
    border-color: #005cbf
}

.collapse-btn-primary:not(:disabled):not(.disabled).active:focus,
.collapse-btn-primary:not(:disabled):not(.disabled):active:focus,
.show>.collapse-btn-primary.dropdown-toggle:focus {
    box-shadow: 0 0 0 .2rem rgba(0, 123, 255, .5)
}

.collapse-btn-secondary {
    color: #fff;
    background-color: #6c757d;
    border-color: #6c757d
}

.collapse-btn-secondary:hover {
    color: #fff;
    background-color: #5a6268;
    border-color: #545b62
}

.collapse-btn-secondary.focus,
.collapse-btn-secondary:focus {
    box-shadow: 0 0 0 .2rem rgba(108, 117, 125, .5)
}

.collapse-btn-secondary.disabled,
.collapse-btn-secondary:disabled {
    color: #fff;
    background-color: #6c757d;
    border-color: #6c757d
}
/* ... */

